tests/resource/valid/error/exception_check.py
a: Exception = Exception()
b: Exception = Exception("b")
